--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "ol": "^4.2.0",
     "ol-mapbox-style": "^2.5.1",
+    "mapbox-to-ol-style": "^2.5.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.5",
