--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "style-loader": "^0.18.2",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "mapbox-to-ol-style": "^2.5.2",
+    "maputnik": "git+https://github.com/maputnik/editor.git",
     "ol": "^4.2.0",
     "ol-mapbox-style": "^2.5.1",
-    "mapbox-to-ol-style": "^2.5.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.5",
