--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "@mapbox/mapbox-gl-style-spec": "^9.0.0",
     "mapbox-to-ol-style": "^2.5.2",
     "maputnik": "git+https://github.com/maputnik/editor.git",
     "ol": "^4.2.0",
